--- a/Login.html
+++ b/Login.html
@@ -15,7 +15,7 @@
 
 		<!-- Core files -->
 		<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-		<!--<script src="https://www.gstatic.com/firebasejs/3.0.2/firebase.js"></script>-->
+		<script src="https://www.gstatic.com/firebasejs/3.0.2/firebase.js"></script>
 		<script src="assets/js/jquery.alerts.js" type="text/javascript"></script>
 		<link href="assets/css/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
 		<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase-app.js"></script>
