--- a/Login.html
+++ b/Login.html
@@ -138,7 +138,7 @@
 												   });
 										       	   while(m=="")
 										       	   {
-										       	   	  sleep(1);
+										       	   	  sleep(.2);
 										       	   }
 										       	   return m;
 										       }
