--- a/Login.html
+++ b/Login.html
@@ -138,6 +138,7 @@
 												   });
 										       	   while(m=="")
 										       	   {
+										       	   	  console.log(m);
 										       	   	  sleep(.2);
 										       	   }
 										       	   return m;
