--- a/Login.html
+++ b/Login.html
@@ -129,7 +129,7 @@
 										       function getCourseInfo(callback)
 										       {
 										       	  var m="";
-										       	  firebase.database().ref('/users/' + firebase.auth().currentUser.uid+'/courses').on('value', function(snapshot, doM(daM)){
+										       	  firebase.database().ref('/users/' + firebase.auth().currentUser.uid+'/courses').on('value', function(snapshot){
 										       	  	   var jojo=snapshot.val();
 													   for(var x in jojo)
 													   {
