--- a/Login.html
+++ b/Login.html
@@ -142,7 +142,20 @@
 										       function one(result) {
 												  var test = result;
 												  console.log(test);
-												  // Do anything you like
+												  // call window.uwkQuery to query the UWKWebView C# component
+												  // in Unity from the web page
+												  const data = {
+											          messageType: "UnityMessage",
+											          message: test
+											      };
+
+											      window.uwkQuery({
+											          // encode the request as a JSON string
+											          request: JSON.stringify(data),
+											          onSuccess: function(response) {
+											            console.log(response); }
+											          }
+											      });
 												}
 
 
