--- a/Login.html
+++ b/Login.html
@@ -133,7 +133,7 @@
 										       	  	   var jojo=snapshot.val();
 													   for(var x in jojo)
 													   {
-  															m+=x+','; m+=jojo[x]+',';
+  															m+=x+','; m+=jojo[x]+';';
 													   }
 													   callback(m); 
 												   });   
