--- a/Login.html
+++ b/Login.html
@@ -153,7 +153,7 @@
 											          // encode the request as a JSON string
 											          request: JSON.stringify(data),
 											          onSuccess: function(response) {
-											            console.log(response); }
+											            console.log(response); 
 											          }
 											      });
 												}
