--- a/Chat.html
+++ b/Chat.html
@@ -54,7 +54,7 @@
     </div>
 
 
-    <p><span id="mathTextBox" style:"color=cyan" class="mathquill-editor"></span></p>
+    <p><span id="mathTextBox" style="color:cyan" class="mathquill-editor"></span></p>
 
     
     <script type="text/javascript" src="Latex/mathquill.js"></script>
