call command from already run script

--- a/Chat.html
+++ b/Chat.html
@@ -107,6 +107,7 @@
               currentCourse="";
               currentCourseId="";
             }
+            getCourseInfo(function(result){one(result);});
             console.log("currentCourse="+currentCourse);
             console.log("currentCourseId="+currentCourseId);
             if(currentCourse!=null && currentCourse!="" && currentCourseId!=null && currentCourseId!="")
