--- a/Chat.html
+++ b/Chat.html
@@ -42,9 +42,9 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color:lightgrey;">
     <!-- CHAT MARKUP -->
-    <div style="color:cyan" class="scroll-pane">
+    <div style="color:black" class="scroll-pane">
       <header>Chat, Ask Questions, and Write Solutions Here</header>
       <hr />
       <hr />
