--- a/Chat.html
+++ b/Chat.html
@@ -274,6 +274,7 @@
                 element.appendChild(line);
 
                 //SCROLL TO BOTTOM OF MESSAGE LIST
+                $("#scroller").scrollTop($("#scroller")[0].scrollHeight);
                 //messageList[0].scrollTop = messageList[0].scrollHeight;
                 var list=document.getElementsByClassName("message");
                 for (var i = 0; i < list.length; i++) {
