--- a/Chat.html
+++ b/Chat.html
@@ -228,7 +228,7 @@
             {
               console.log("messagesRef not null pushing...");
               messagesRef.push({name:username, text:message});
-              $(document.getElementById("mathTextBox")).mathquill('latex','');
+              $(document.getElementById("mathTextBox")).mathquill('latex','I');
             }
             else
             {
