--- a/Chat.html
+++ b/Chat.html
@@ -236,7 +236,8 @@
             }
           });
           //SAVE DATA TO FIREBASE AND EMPTY FIELD
-          $("#scroller").scrollTop($("#scroller")[0].scrollHeight);          
+          var objDiv = document.getElementById("scroller");
+          objDiv.scrollTop = objDiv.scrollHeight;         
         }
         catch(ex)
         {
@@ -274,7 +275,8 @@
                 element.appendChild(line);
 
                 //SCROLL TO BOTTOM OF MESSAGE LIST
-                $("#scroller").scrollTop($("#scroller")[0].scrollHeight);
+                var objDiv = document.getElementById("your_div");
+                objDiv.scrollTop = objDiv.scrollHeight;
                 //messageList[0].scrollTop = messageList[0].scrollHeight;
                 var list=document.getElementsByClassName("message");
                 for (var i = 0; i < list.length; i++) {
